# anyhow-tauri

./: Cargo.toml  LICENSE  README.md
demo/: README.md  package-lock.json  package.json
demo/src/: index.html  main.js  styles.css
demo/src-tauri/: Cargo.toml  tauri.conf.json
demo/src-tauri/src/: main.rs
src/: lib.rs
