[package]
name = "anyhow-tauri"
version = "1.0.0"
edition = "2021"
exclude = ["demo/*"]
license = "MIT"
description = "A crate that lets you use anyhow as a command result with the tauri framework."
homepage = "https://github.com/TDiblik/anyhow-tauri"
repository = "https://github.com/TDiblik/anyhow-tauri"
authors = ["Tomáš Diblík <dibla.tomas@post.cz>"]
readme = "./README.md"

[features]
show_errs_in_release = []

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
