[package]
name = "demo"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# don't use the following in "real" application
# this is here just so you can see the app's behaviour 
# with/without the `show_errs_in_release` feature
[profile.release.package.wry]
debug = true
debug-assertions = true

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
anyhow-tauri = { path = "../../" }
# if you want to enable errors in release mode
# anyhow-tauri = { path = "../../", features = ["show_errs_in_release"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
